<resources>
    <string name="app_name">AD340App</string>
    <string name="welcome">Welcome!</string>
    <string name="submit">SUBMIT</string>
    <string name="emailHint">Email</string>
    <string name="emailTest">email@email.com</string>
    <string name="nameHint">Name</string>
    <string name="usernameHint">Username</string>
    <string name="dob_entry">Select your date of birth: </string>
    <string name="userDobHint">12/12/12</string>
    <string name="userOccupationHint">Occupation</string>
    <string name="userDescriptionHint">Describe yourself</string>
    <string name="matches">Matches</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>

    <string name="match_name">MatchFirstName MatchLastName</string>
    <string name="user_desc">Description of match user.</string>
    <string name="profile_picture">Your profile picture</string>
    <string name="user_profile_picture">Profile picture of user</string>

    <string name="age_invalid">You must be 18 to join.</string>
    <string name="like_button_message">You liked </string>
    <string name="unlike_button_message">You unliked </string>
    <string name="daily_match_reminder">Daily Matches Reminder Time: </string>
    <string name="max_search_dist">Maximum Distance Search (in Miles): </string>
    <string name="gender">Gender </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="privacy">Account Privacy Setting</string>
    <string name="radio_private">Private</string>
    <string name="radio_public">Public</string>
    <string name="age_interest">My Match Interest Range Is Between Ages</string>
    <string name="between">Between Ages </string>
    <string name="and">and </string>
    <string name="save">Save</string>
    <string name="time_hint">12:00</string>
    <string name="time_button">Select time</string>
    <string name="distance_hint">20 miles</string>
    <string name="age_hint_lo">20</string>
    <string name="age_hint_hi">35</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your Locations Settings is set to \'Off\'. Please Enable Location to use this app</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Cancel</string>
    <string name="network_provider_started_running">Network provider started running</string>
    <string name="network_provider_update">Network Provider update</string>
    <string name="filter_on">Distance filter: on</string>
    <string name="filter_off">Distance filter: off</string>

    <string name="MatchMaxDistance_off">Distance filter: off</string>
    <string name="MatchMaxDistance_on">Distance filter: off</string>



    <string name="test_email">test@test.com</string>
</resources>
